add a few demos for angular ui bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="showcase">
 <head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="assets/css/showcase.css" />
 </head>
 <body>
@@ -30,6 +31,8 @@
 <script type="text/javascript" src="assets/vendor/js/underscore.js"></script>
 <script type="text/javascript" src="assets/vendor/js/jquery.js"></script>
 <script type="text/javascript" src="assets/vendor/js/angular.js"></script>
+<script type="text/javascript" src="assets/vendor/js/angular-animate.js"></script>
+<script type="text/javascript" src="assets/vendor/js/ui-bootstrap-tpls.js"></script>
 <script type="text/javascript" src="assets/vendor/js/angular-ui-router.js"></script>
 <script type="text/javascript" src="assets/js/showcase.util.js"></script>
 <script type="text/javascript" src="assets/js/showcase.js"></script>
